Gerando documentação da api de autenticação
