# docs/swagger/schemas.php
@@ -32,3 +32,36 @@
  *   @OA\Property(property="senha", type="string", description="Senha para acesso a conta. Em ações de leitura a senha será omitida por ser dado sensível.")
  * )
  */
+
+#-------------------------------------------------------------------------------
+############################## Login ##############################
+#-------------------------------------------------------------------------------
+
+/**
+ * @OA\Schema(
+ *   schema="Login",
+ *   title="Autenticação",
+ *   required={"login", "password"},
+ *   @OA\Property(property="login", type="string", description="E-mail ou CPF/CNPJ."),
+ *   @OA\Property(property="password", type="string", description="Senha de acesso."),
+ *
+ * )
+ */
+
+ /**
+ * @OA\Schema(
+ *   schema="ContaAutenticada",
+ *   title="Conta Autenticada",
+ *   @OA\Property(property="id", type="string", description="ID universal."),
+ *   @OA\Property(property="titular", type="string", description="Nome do titular.")
+ * )
+ */
+
+/**
+ * @OA\Schema(
+ *   schema="ContaAutenticadaResponse",
+ *   title="Conta Autenticada Resposta",
+ *   @OA\Property(property="conta", ref="#/components/schemas/ContaAutenticada"),
+ *   @OA\Property(property="token", type="string", description="Token de acesso")
+ * )
+ */
